<resources>
    <string name="app_name">Aldeberan</string>
    <string name="facebook_app_id">246864007377685</string>
    <string name="fb_login_protocol_scheme">fb246864007377685</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_product_listing_detail_page">product_listing_detail_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="def_log_id">642954040818-6irbp09abs1ndjh611uif3sf1qrhdne7.apps.googleusercontent.com</string>
    <string name="admin_product_submit_btn">Submit</string>
    <string name="admin_product_cancel_btn">Cancel</string>
    <string name="admin_product_imagebtn">Pick Image from Gallery</string>
    <string name="admin_product_update_btn">Update</string>
    <string name="admin_product_reset_btn">Reset</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_search">You\'d searched something invalid! Here\'s a duck for you :)</string>
    <string name="empty_search">Please type in the product name that you want to search.</string>

    <string name="update_product">UPDATE</string>
    <string name="delete_product">DELETE</string>
    <string name="no_product">There are no products available at the moment! Please add a new product.</string>
    <string name="no_address">There are no addresses saved in the address book. Please add a new address.</string>

    <string name="user_settings_address">Address Book</string>
    <string name="user_settings_info">User Info</string>
    <string name="user_settings_wishlist">My Wishlist</string>
    <string name="user_settings_order">Order History</string>
    <string name="user_settings_login">Login</string>
    <string name="user_settings_logout">Logout</string>
    <string name="user_settings_coupons">My Coupons</string>
    <string name="user_settings_info_back">Return to User Settings</string>
    <string name="user_settings_report">Report a Bug?</string>
    <string name="user_setting_admin">Admin Panel</string>

    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_products">Products</string>
    <string name="bottom_nav_cart">Cart</string>
    <string name="bottom_nav_user">User</string>

    <string name="homepage_label_bs">BEST SELLERS</string>
    <string name="homepage_label_na">NEW ARRIVALS</string>
    <string name="homepage_label_ap">ALL PRODUCTS</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="MAPS_API_KEY">AIzaSyBy75XBl8JciqNkdJbAKxdZULVxw4IMPBY</string>
    <string name="loading_sender_location">Loading live sender\'s location...</string>
    <string name="homepage_view_more">View More Products</string>
    <string name="admin_email_1">aldeberan.emporium@gmail.com</string>
    <string name="admin_email_2">noreply.aldeberanemporium@gmail.com</string>


</resources>